# telecon

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  socket.rs
src/bot/: keyboard.rs  mod.rs
src/bot/handlers/: callback.rs  command.rs
src/parser/: mod.rs
src/runner/: mod.rs
tcon/: Cargo.toml
tcon/src/: main.rs
telecon/: Cargo.toml  service_template.toml
telecon/src/: lib.rs  socket.rs  utils.rs
telecon/src/app/: command_runner.rs  dispatcher.rs  mod.rs  service_manager.rs
telecon/src/bot/: keyboard.rs  mod.rs  sender.rs
telecon/src/bot/handlers/: callback.rs  command.rs
telecon/src/domain/: action.rs  mod.rs  notification.rs
telecon/src/parser/: handler.rs  mod.rs  tree.rs
telecon/src/runner/: mod.rs
telecon/tests/: integration_tests.rs
telecond/: Cargo.toml
telecond/src/: main.rs
