[package]
name = "telecon"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "telecond"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
