[package]
name = "tcon"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
telecon = { path = "../telecon" }
anyhow = "1.0.100"
