[package]
name = "telecon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["full"] }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
